# clean-ai-artifacts

./: README.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
src/clean_ai_artifacts/: cli.py
tests/: test_clean.py
