[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clean-ai-artifacts"
version = "1.0.0"
description = "Remove AI-generated markdown files and emojis from your codebase"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = [
    "ai",
    "cleanup",
    "emoji",
    "markdown",
    "pre-commit",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Filters",
]
dependencies = [
    "emoji>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
clean-ai-artifacts = "clean_ai_artifacts.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/clean-ai-artifacts"
Repository = "https://github.com/YOUR_USERNAME/clean-ai-artifacts"
Issues = "https://github.com/YOUR_USERNAME/clean-ai-artifacts/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clean_ai_artifacts"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
